--- a/app/src/main/res/layout/fragment_character_list.xml
+++ b/app/src/main/res/layout/fragment_character_list.xml
@@ -7,6 +7,7 @@
     android:id="@+id/character_fragment">
 
     <TextView
+        android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/character" />
