--- a/app/src/main/res/layout/location_item.xml
+++ b/app/src/main/res/layout/location_item.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/name_field"
+        android:id="@+id/response_field"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -38,7 +38,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.045"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/name_field" />
+        app:layout_constraintTop_toBottomOf="@+id/response_field" />
 
     <TextView
         android:id="@+id/idView"
@@ -60,7 +60,7 @@
         android:layout_marginTop="4dp"
         android:maxLines="1"
         android:textColor="@color/black"
-        app:layout_constraintStart_toEndOf="@+id/name_field"
+        app:layout_constraintStart_toEndOf="@+id/response_field"
         app:layout_constraintTop_toBottomOf="@+id/idView"
         tools:text="Test Test" />
 
