--- a/app/src/main/res/layout/character_item.xml
+++ b/app/src/main/res/layout/character_item.xml
@@ -8,7 +8,7 @@
 
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/image"
         android:layout_width="94dp"
         android:layout_height="81dp"
         android:contentDescription="@string/image"
@@ -29,7 +29,7 @@
         android:text="@string/id"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.03"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/image"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -40,7 +40,7 @@
         android:text="@string/name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.032"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/image"
         app:layout_constraintTop_toBottomOf="@+id/id_field" />
 
     <TextView
@@ -51,7 +51,7 @@
         android:text="@string/species"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.034"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/image"
         app:layout_constraintTop_toBottomOf="@+id/response_field" />
 
     <TextView
@@ -62,7 +62,7 @@
         android:layout_marginTop="4dp"
         android:maxLines="1"
         android:textColor="@color/black"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/image"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="1" />
 
@@ -74,7 +74,7 @@
         android:layout_marginTop="4dp"
         android:maxLines="1"
         android:textColor="@color/black"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/image"
         app:layout_constraintTop_toBottomOf="@+id/idView"
         tools:text="Test Test" />
 
@@ -86,7 +86,7 @@
         android:layout_marginTop="4dp"
         android:maxLines="1"
         android:textColor="@color/black"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toEndOf="@+id/image"
         app:layout_constraintTop_toBottomOf="@+id/nameView"
         tools:text="Test Test" />
 </androidx.constraintlayout.widget.ConstraintLayout>
