--- a/app/src/main/res/menu/bottom_navigation_bar.xml
+++ b/app/src/main/res/menu/bottom_navigation_bar.xml
@@ -13,5 +13,9 @@
         android:id="@+id/episode"
         android:title="@string/episode"
         android:icon="@drawable/ic_three"/>
+    <item
+        android:id="@+id/search"
+        android:title="@string/search"
+        android:icon="@drawable/ic_baseline_search_24"/>
 
 </menu>
